--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<h1>NFL Trivia</h1>
+<script src="test.js"></script>
+<!doctype html>
+<html>
+  <head>
+    <link rel ="stylesheet" href="test.css">
+  </head>
+  <body>
+
+    <h1>NFL Trivia</h1>
 <h2>Difficulty Level: 1</h2>
 <h3>Click the buttons to reveal answers</h3>
 
@@ -31,4 +39,6 @@
 
 
 </div>
+  </body>
+</html> 
 
