--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<script src="test.js"></script>
 <!doctype html>
 <html>
   <head>
     <link rel ="stylesheet" href="test.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.is"></script>
+    <script src="test.js"> </script>
   </head>
   <body>
 
-    <h1>NFL Trivia</h1>
-<h2>Difficulty Level: 1</h2>
-<h3>Click the buttons to reveal answers</h3>
+  <h1>NFL Trivia</h1>
+  <h2>Difficulty Level: 1</h2>
+  <h3>Click the buttons to reveal answers</h3>
 
-<div id="container">
+  <div id="container">
 
   <div id="column-left">
     <div class="button-container">
